Fix Home Categories alignment
Incorporated @IagoSRL comments and also made sure that the backrgound
images have the same height. They had different lenghts and therefore
the auto was setting different heights.

--- a/app/source/css/activities/home.styl
+++ b/app/source/css/activities/home.styl
@@ -23,6 +23,7 @@
         $sectionTitleLineHeight = ceil($sectionTitleFontSize * 1.1);
         $sectionTitleFontSizeSmall = 28px;
         $sectionTitleLineHeightSmall = ceil($sectionTitleFontSizeSmall * 1.1);
+        $categoriesLineheight = 23px;
 
         .home-section-title {
             color: White;
@@ -249,7 +250,7 @@
                 li {
                     // background photo setup (will have an image per category)
                     background: White no-repeat top center / contain;
-                    background-size: 240px auto;
+                    background-size: auto 160px;
                     display: inline-block;
                     width: $boxSize;
                     margin: $boxMargin;
@@ -334,7 +335,7 @@
                         margin: 0px 0px 30px;
                         color: $gray-dark;
                         font-size: 16px;
-                        min-height: 88px;
+                        min-height: $categoriesLineheight * 4; // In case there are less than 4 lines.
                     }
 
                     .btn {
